--- a/tank_ws/src/tank_navigation/web/gps_waypoint_planner.html
+++ b/tank_ws/src/tank_navigation/web/gps_waypoint_planner.html
@@ -403,7 +403,7 @@
         function subscribeToGPS() {
             const gpsListener = new ROSLIB.Topic({
                 ros: ros,
-                name: '/ubx_nav_hp_pos_llh',
+                name: '/gnss/fix',
                 messageType: 'sensor_msgs/NavSatFix'
             });
             
