Add GPS waypoint planner web interface

--- a/tank_ws/src/tank_navigation/web/gps_waypoint_planner.html
+++ b/tank_ws/src/tank_navigation/web/gps_waypoint_planner.html
@@ -200,6 +200,7 @@
             <ul id="waypointList"></ul>
             <button onclick="sendWaypoints()" class="success">🚀 Send Mission to Robot</button>
             <button onclick="stopMission()" class="danger" style="width: 100%; margin-top: 10px; font-size: 18px; padding: 15px; font-weight: bold;">🛑 STOP MISSION</button>
+            <button onclick="shutdownSystem()" class="danger" style="width: 100%; margin-top: 10px; font-size: 18px; padding: 15px; font-weight: bold; background: #8B0000;">⚠️ SHUTDOWN SYSTEM</button>
             <button onclick="exportWaypoints()">💾 Export Waypoints</button>
         </div>
         
